# simplessl

./: CMakeLists.txt  README.md
src/: main.cpp
src/utils/: utils.cpp  utils.h
